Add pandas dataframe statistics

--- a/notebooks/2-pandas-dataframe-statistics.ipynb
+++ b/notebooks/2-pandas-dataframe-statistics.ipynb
@@ -15,21 +15,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Question: What is Pandas library?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "*Pandas* is high-performance, easy-to-use *data structures* and *data analysis tools* for the Python programming language."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Question: How to load pandas library?"
+    "#### Question: How to see the first *n* rows?"
    ]
   },
   {
@@ -42,13 +28,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Question: How to read a csv file?"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -56,14 +35,14 @@
    "source": [
     "PATH = '../data/'\n",
     "gapminders = pd.read_csv(PATH + 'gapminder.csv')\n",
-    "gapminders.head()"
+    "gapminders.head(n=10)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Question: How to read a tabular file?"
+    "#### Question: How to see the last n rows?"
    ]
   },
   {
@@ -72,8 +51,80 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "users = pd.read_table(PATH +'users.tsv', sep=\"|\", header=None, names=['id','age','gender','occupation','zip_code'])\n",
-    "users.head()"
+    "gapminders.tail(n=5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Question: What is the return type of read_csv/read_table?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "type(gapminders)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Question: What is the dimensionality of the DataFrame?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gapminders.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Question: What is the data types of the DataFrame?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gapminders.dtypes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Question: How to get statistical information of the DataFrame?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gapminders.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gapminders.describe(include=['object'])"
    ]
   },
   {
@@ -87,11 +138,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* We can read csv files with pandas by using *read_csv* method\n",
-    "* We can read tabular files with *read_table* method\n",
-    "* The *sep* argument used to detect the seperator between two records\n",
-    "* The *header* argument is a list of integers which is used as the columns names\n",
-    "* The *names* argument specifies column names"
+    "* We can see the first n rows with *head* method\n",
+    "* We can see the last n rows with *tail* method\n",
+    "* The *shape* proporty represents the dimentionality of the DataFrame\n",
+    "* The *dtypes* propoerty shows the types of the DataFrame\n",
+    "* We can get statistical information of the DataFrame with *describe* method"
    ]
   }
  ],
