Add pandas select data series

--- a/notebooks/3-pandas-select-data-series.ipynb
+++ b/notebooks/3-pandas-select-data-series.ipynb
@@ -5,17 +5,10 @@
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-info\">\n",
-    "    <h1 align=\"center\">Pandas DataFrame Statistics</h1>\n",
+    "    <h1 align=\"center\">Pandas Selecting DataSeries</h1>\n",
     "    <h3 align=\"center\"> Machine Learning Course</h3>\n",
     "    <h5 align=\"center\">Alireza Aghamohammadi (http://linkedin.com/in/aaghamohammadi)</h5>\n",
     "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Question: How to see the first *n* rows?"
    ]
   },
   {
@@ -34,15 +27,14 @@
    "outputs": [],
    "source": [
     "PATH = '../data/'\n",
-    "gapminders = pd.read_csv(PATH + 'gapminder.csv')\n",
-    "gapminders.head(n=10)"
+    "gapminders = pd.read_csv(PATH + 'gapminder.csv')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Question: How to see the last n rows?"
+    "#### Question: How to select a column from the DataFrame?"
    ]
   },
   {
@@ -51,62 +43,52 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gapminders.tail(n=5)"
+    "country = gapminders['country']\n",
+    "country"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "type(country)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Question: What is the return type of read_csv/read_table?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "type(gapminders)"
+    "#### Question: Is it *case sensitive*?"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Question: What is the dimensionality of the DataFrame?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gapminders.shape"
+    "Yes. DataSeries is sensitive to upper and lower cases."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Question: What is the data types of the DataFrame?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gapminders.dtypes"
+    "**gapminders['Country']** --> raise an error"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Question: How to get statistical information of the DataFrame?"
+    "#### Tips and Tricks"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can select a pandas Series from a DataFrame by using dot shortcut."
    ]
   },
   {
@@ -115,7 +97,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gapminders.describe()"
+    "gapminders.country"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Warning: Do not use dot shortcut!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " - What happened if we have *space* in column names?\n",
+    " - What happened if the name already *built-in* pandas?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Question: How to create new DataSeries?"
    ]
   },
   {
@@ -124,7 +128,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gapminders.describe(include=['object'])"
+    "gapminders['location'] = gapminders['country'] + ',' + gapminders['region']\n",
+    "gapminders.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is just like **concatenation of two strings** --> 'hello' + 'world'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Tips and Tricks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "country, year, infant_mortality, life_expectancy, fertility, population, gdp, continent, region, location = gapminders.columns"
    ]
   },
   {
@@ -138,11 +166,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* We can see the first n rows with *head* method\n",
-    "* We can see the last n rows with *tail* method\n",
-    "* The *shape* proporty represents the dimentionality of the DataFrame\n",
-    "* The *dtypes* propoerty shows the types of the DataFrame\n",
-    "* We can get statistical information of the DataFrame with *describe* method"
+    "* We can select the column with *[column_name]*\n",
+    "* We can use *dot* shortcut to select a DataSeries\n",
+    "* We can concat two DataSeries and create new one\n",
+    "* We see a few tips and tricks"
    ]
   }
  ],
