--- a/notebooks/28-matplotlib-hbar-chart.ipynb
+++ b/notebooks/28-matplotlib-hbar-chart.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-info\">\n",
-    "    <h1 align=\"center\">Matplotlib Bar Chart</h1>\n",
+    "    <h1 align=\"center\">Matplotlib Horizontal Bar Chart</h1>\n",
     "    <h3 align=\"center\"> Machine Learning Course</h3>\n",
     "    <h5 align=\"center\">Alireza Aghamohammadi (http://linkedin.com/in/aaghamohammadi)</h5>\n",
     "</div>"
