add matplotlib styling

--- a/notebooks/33-matplotlib-bar-chart-stacking.ipynb
+++ b/notebooks/33-matplotlib-bar-chart-stacking.ipynb
@@ -5,31 +5,24 @@
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-info\">\n",
-    "    <h1 align=\"center\">Pandas Read Files</h1>\n",
+    "    <h1 align=\"center\">Matplotlib Bar Chart Stacking</h1>\n",
     "    <h3 align=\"center\"> Machine Learning Course</h3>\n",
     "    <h5 align=\"center\">Alireza Aghamohammadi (http://linkedin.com/in/aaghamohammadi)</h5>\n",
     "</div>"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "#### Question: What is Pandas library?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "*Pandas* is high-performance, easy-to-use *data structures* and *data analysis tools* for the Python programming language."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Question: How to load pandas library?"
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "plt.style.use('seaborn')\n",
+    "PATH_DATA = \"../data/\"\n",
+    "PATH_IMG = \"../img/\""
    ]
   },
   {
@@ -38,14 +31,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "movies = pd.read_csv(PATH_DATA + \"movie.csv\")\n",
+    "movies.head()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Question: How to read a csv file?"
+    "#### Question: How do I draw number of moviews per content rating for each country?"
    ]
   },
   {
@@ -54,16 +48,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "PATH = '../data/'\n",
-    "gapminders = pd.read_csv(PATH + 'gapminder.csv')\n",
-    "gapminders.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Question: How to read a tabular file?"
+    "df = movies.groupby('country')['content_rating'].value_counts().unstack().loc[:, ['R', 'PG-13', 'PG']]\n",
+    "df.head()"
    ]
   },
   {
@@ -72,11 +58,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "users = pd.read_table(PATH +'users.tsv',\n",
-    "                      sep=\"|\",\n",
-    "                      header=None,\n",
-    "                      names=['id','age','gender','occupation','zip_code'])\n",
-    "users.head()"
+    "fig, ax = plt.subplots()\n",
+    "df.loc[df.sum(axis=1).sort_values(ascending=False)[1:5].index].plot.bar(ax = ax, stacked=True)\n",
+    "ax.set_ylabel(\"Number of Movies\")\n",
+    "ax.set_xlabel(\"Country\")\n",
+    "fig.show()"
    ]
   },
   {
@@ -90,11 +76,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* We can read csv files with pandas by using *read_csv* method\n",
-    "* We can read tabular files with *read_table* method\n",
-    "* The *sep* argument used to detect the seperator between two records\n",
-    "* The *header* argument is a list of integers which is used as the columns names\n",
-    "* The *names* argument specifies column names"
+    "* We learned how to plot bar chart\n",
+    "* We learned how to stack bar chart"
    ]
   }
  ],
@@ -114,7 +97,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
