--- a/notebooks/34-matplotlib-styling.ipynb
+++ b/notebooks/34-matplotlib-styling.ipynb
@@ -5,31 +5,31 @@
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-info\">\n",
-    "    <h1 align=\"center\">Pandas Read Files</h1>\n",
+    "    <h1 align=\"center\">Matplotlib Scatter Plot</h1>\n",
     "    <h3 align=\"center\"> Machine Learning Course</h3>\n",
     "    <h5 align=\"center\">Alireza Aghamohammadi (http://linkedin.com/in/aaghamohammadi)</h5>\n",
     "</div>"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "#### Question: What is Pandas library?"
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "plt.style.use('seaborn')\n",
+    "PATH_DATA = \"../data/\"\n",
+    "PATH_IMG = \"../img/\""
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Pandas* is high-performance, easy-to-use *data structures* and *data analysis tools* for the Python programming language."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Question: How to load pandas library?"
+    "#### Question: How do I create and draw linear random number with some noise?"
    ]
   },
   {
@@ -38,14 +38,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "fig, ax = plt.subplots(figsize=(6,4), dpi=300)\n",
+    "x = np.linspace(1, 10, 100)\n",
+    "noise = np.random.rand(100)\n",
+    "y =  0.5 * x + 3 + 3.5 * noise\n",
+    "ax.set_title(r\"$y = 0.5x + 3$\", fontsize=10)\n",
+    "ax.set_xlabel(\"X\")\n",
+    "ax.set_ylabel(\"Y\")\n",
+    "ax.scatter(x, y)\n",
+    "fig.suptitle(\"Generate Random Numbers\", fontweight=\"bold\")\n",
+    "fig.show()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Question: How to read a csv file?"
+    "#### How can I set plot parameters at first?"
    ]
   },
   {
@@ -54,29 +63,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "PATH = '../data/'\n",
-    "gapminders = pd.read_csv(PATH + 'gapminder.csv')\n",
-    "gapminders.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Question: How to read a tabular file?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "users = pd.read_table(PATH +'users.tsv',\n",
-    "                      sep=\"|\",\n",
-    "                      header=None,\n",
-    "                      names=['id','age','gender','occupation','zip_code'])\n",
-    "users.head()"
+    "plt.rcParams['figure.figsize'] = (6,4)\n",
+    "plt.rcParams['figure.titlesize'] = 10\n",
+    "plt.rcParams['figure.dpi'] = 300"
    ]
   },
   {
@@ -90,11 +79,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* We can read csv files with pandas by using *read_csv* method\n",
-    "* We can read tabular files with *read_table* method\n",
-    "* The *sep* argument used to detect the seperator between two records\n",
-    "* The *header* argument is a list of integers which is used as the columns names\n",
-    "* The *names* argument specifies column names"
+    "* We learned how to draw scatter plot\n",
+    "* We learned how to style plot and set its parameters at first"
    ]
   }
  ],
@@ -114,7 +100,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
