--- a/notebooks/03-pandas-select-data-series.ipynb
+++ b/notebooks/03-pandas-select-data-series.ipynb
@@ -152,7 +152,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "country, year, infant_mortality, life_expectancy, fertility, population, gdp, continent, region, location = gapminders.columns"
+    "country,\n",
+    "year,\n",
+    "infant_mortality,\n",
+    "life_expectancy,\n",
+    "fertility,\n",
+    "population,\n",
+    "gdp,\n",
+    "continent,\n",
+    "region,\n",
+    "location = gapminders.columns"
    ]
   },
   {
