--- a/notebooks/04-pandas-rename-columns.ipynb
+++ b/notebooks/04-pandas-rename-columns.ipynb
@@ -67,7 +67,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gapminders_cols = ['country', 'year', 'infant_mortality', 'life_expectancy', 'fertility', 'population', 'gdp', 'continent', 'region']\n",
+    "gapminders_cols = ['country',\n",
+    "                   'year',\n",
+    "                   'infant_mortality',\n",
+    "                   'life_expectancy',\n",
+    "                   'fertility',\n",
+    "                   'population',\n",
+    "                   'gdp',\n",
+    "                   'continent',\n",
+    "                   'region']\n",
     "gapminders.columns = gapminders_cols\n",
     "gapminders.head()"
    ]
