--- a/notebooks/06-pandas-filter-columns.ipynb
+++ b/notebooks/06-pandas-filter-columns.ipynb
@@ -177,7 +177,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gapminders[(gapminders.year==2015) & ((gapminders.population>=1e7) | (gapminders.life_expectancy>=70)) & (gapminders.continent.isin(['Asia', 'Europe']))]"
+    "gapminders[(gapminders.year==2015)\n",
+    "           & \n",
+    "           (\n",
+    "               (gapminders.population>=1e7)\n",
+    "            |  \n",
+    "               (gapminders.life_expectancy>=70)\n",
+    "           )\n",
+    "           & (gapminders.continent.isin(['Asia', 'Europe']))]"
    ]
   },
   {
