--- a/notebooks/11-pandas-statistics.ipynb
+++ b/notebooks/11-pandas-statistics.ipynb
@@ -118,7 +118,10 @@
    "outputs": [],
    "source": [
     "movies = pd.read_csv(PATH+'movie.csv')\n",
-    "pd.crosstab(movies.imdb_score, movies.content_rating, margins=True, margins_name='Total')"
+    "pd.crosstab(movies.imdb_score,\n",
+    "            movies.content_rating,\n",
+    "            margins=True,\n",
+    "            margins_name='Total')"
    ]
   },
   {
@@ -154,7 +157,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
