--- a/notebooks/14-pandas-multiindexing.ipynb
+++ b/notebooks/14-pandas-multiindexing.ipynb
@@ -81,7 +81,9 @@
    "outputs": [],
    "source": [
     "# or you can use the following code\n",
-    "movies.pivot_table(values='imdb_score', index='country', columns='content_rating')"
+    "movies.pivot_table(values='imdb_score',\n",
+    "                   index='country',\n",
+    "                   columns='content_rating')"
    ]
   },
   {
@@ -258,7 +260,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
