--- a/notebooks/15-pandas-apply.ipynb
+++ b/notebooks/15-pandas-apply.ipynb
@@ -28,7 +28,10 @@
    "outputs": [],
    "source": [
     "PATH = \"../data/\"\n",
-    "movies = pd.read_table(PATH + \"users.tsv\", sep=\"|\", header=None, names=['id','age','gender','occupation','zip_code'])\n",
+    "movies = pd.read_table(PATH + \"users.tsv\",\n",
+    "                       sep=\"|\",\n",
+    "                       header=None,\n",
+    "                       names=['id','age','gender','occupation','zip_code'])\n",
     "movies.head()"
    ]
   },
@@ -152,7 +155,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
