--- a/notebooks/33-matplotlib-bar-chart-stacking.ipynb
+++ b/notebooks/33-matplotlib-bar-chart-stacking.ipynb
@@ -59,7 +59,9 @@
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots()\n",
-    "df.loc[df.sum(axis=1).sort_values(ascending=False)[1:5].index].plot.bar(ax = ax, stacked=True)\n",
+    "df.loc[df.sum(axis=1)\n",
+    "  .sort_values(ascending=False)[1:5].index]\n",
+    "  .plot.bar(ax = ax, stacked=True)\n",
     "ax.set_ylabel(\"Number of Movies\")\n",
     "ax.set_xlabel(\"Country\")\n",
     "fig.show()"
@@ -97,7 +99,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
