--- a/notebooks/35-matplotlib-ticks.ipynb
+++ b/notebooks/35-matplotlib-ticks.ipynb
@@ -63,8 +63,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = stackoverflow.groupby(pd.Grouper(key='creationdate', freq='M'))[['quest_rep','ans_rep']].mean()\n",
-    "df.reset_index(inplace=True)"
+    "df = stackoverflow.\n",
+    "                   groupby(pd\n",
+    "                  .Grouper(key='creationdate', freq='M'))\n",
+    "                  [['quest_rep','ans_rep']].mean()\n",
+    "                  df.reset_index(inplace=True)"
    ]
   },
   {
@@ -157,7 +160,12 @@
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots(figsize=(6,4), dpi=300)\n",
-    "ax.plot(df.creationdate.dt.month,df.ans_rep, linestyle='dashed', marker='o', markerfacecolor='blue', markersize=4)\n",
+    "ax.plot(df.creationdate.dt.month,\n",
+    "        df.ans_rep,\n",
+    "        linestyle='dashed',\n",
+    "        marker='o',\n",
+    "        markerfacecolor='blue',\n",
+    "        markersize=4)\n",
     "ax.grid(False)\n",
     "ax.set_xlim(0.8,12.2)\n",
     "ax.set_xticks(range(1,13))\n",
@@ -204,7 +212,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
