--- a/notebooks/09-pandas-type.ipynb
+++ b/notebooks/09-pandas-type.ipynb
@@ -82,7 +82,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "users = pd.read_table(PATH + 'users.tsv', sep='|', names=['id', 'age', 'gender', 'occupation', 'zip_code'])\n",
+    "users = pd.read_table(PATH + 'users.tsv',\n",
+    "                      sep='|',\n",
+    "                      names=['id', 'age', 'gender', 'occupation', 'zip_code'])\n",
     "users.head()"
    ]
   },
@@ -152,7 +154,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
