--- a/notebooks/12-pandas-indexing.ipynb
+++ b/notebooks/12-pandas-indexing.ipynb
@@ -119,7 +119,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gapminders.loc[(gapminders.index=='Argentina') & (gapminders.year==1960) , 'population']"
+    "gapminders.loc[(gapminders.index=='Argentina') & (gapminders.year==1960),\n",
+    "               'population']"
    ]
   },
   {
@@ -255,7 +256,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
