--- a/notebooks/18-pandas-duplicated-data.ipynb
+++ b/notebooks/18-pandas-duplicated-data.ipynb
@@ -27,7 +27,10 @@
    "outputs": [],
    "source": [
     "PATH = \"../data/\"\n",
-    "users = pd.read_table(PATH + \"users.tsv\", sep=\"|\", header=None,names=['id','age','gender','occupation','zip_code'])\n",
+    "users = pd.read_table(PATH + \"users.tsv\",\n",
+    "                      sep=\"|\",\n",
+    "                      header=None,\n",
+    "                      names=['id','age','gender','occupation','zip_code'])\n",
     "users.shape"
    ]
   },
@@ -190,7 +193,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
