--- a/notebooks/28-matplotlib-hbar-chart.ipynb
+++ b/notebooks/28-matplotlib-hbar-chart.ipynb
@@ -29,7 +29,10 @@
    "outputs": [],
    "source": [
     "PATH = \"../data/\"\n",
-    "users = pd.read_table(PATH + \"users.tsv\", header=None, sep=\"|\", names=[\"id\", \"age\", \"gender\", \"occupation\", \"zip_code\"])\n",
+    "users = pd.read_table(PATH + \"users.tsv\",\n",
+    "                      header=None,\n",
+    "                      sep=\"|\",\n",
+    "                      names=[\"id\", \"age\", \"gender\", \"occupation\", \"zip_code\"])\n",
     "users.head()"
    ]
   },
@@ -135,7 +138,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
